--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumbs title="RESULTS" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<app-breadcrumbs title="RESULTS" [breadcrumbItems]="breadCrumbItems" *ngIf="!isModalMode"></app-breadcrumbs>
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
@@ -36,7 +36,7 @@
                                         <ng-select [items]="teacherSections" formControlName="classSectionId"
                                             bindLabel="name" bindValue="id" placeholder="Section"></ng-select>
                                     </div>
-                                    <div class="col-xxl-4 col-lg-6">
+                                    <div class="col-xxl-3 col-lg-6">
                                         <ng-select [items]="teacherSubjects" formControlName="subjectId"
                                             bindLabel="name" bindValue="id" placeholder="Subject"></ng-select>
                                     </div>
@@ -44,7 +44,7 @@
                                         <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="name"
                                             bindValue="examTypeId" placeholder="Exam Type"></ng-select>
                                     </div>
-                                    <div class="col-xxl-1 col-lg-12">
+                                    <div class="col-xxl-2 col-lg-12">
                                         <button type="button" class="btn btn-primary w-100" type="submit"><i
                                                 class="ri-equalizer-fill mx-2"></i>Load</button>
                                     </div>
@@ -71,7 +71,7 @@
             <div class="modal-header p-3 bg-light">
                 <h5 class="modal-title">Import Results</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
-                    (click)="dismissModal()"></button>
+                    (click)="dismissNestedModal()"></button>
             </div>
             <form class="tablelist-form" autocomplete="off" autocomplete="off">
                 <div class="modal-body">
@@ -97,15 +97,16 @@
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="dismissModal()">Done</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="dismissNestedModal()">Done</button>
                 </div>
             </div>
         </ng-template>
+        
         <ng-template #scaleContent role="document" let-modal>
             <div class="modal-header p-3 bg-light">
                 <h5 class="modal-title">Grading Scale</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"
-                    (click)="dismissModal()"></button>
+                    (click)="dismissNestedModal()"></button>
             </div>
             <form class="tablelist-form" autocomplete="off" autocomplete="off">
                 <div class="modal-body">
@@ -119,11 +120,19 @@
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissNestedModal()"><i
                             class="ri-close-line align-bottom me-1"></i> Close</button>
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal" disabled="true"><i
                             class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </ng-template>
+
+        <div class="modal-footer" *ngIf="isModalMode">
+            <div class="hstack gap-2 justify-content-end">
+                <button type="button" class="btn btn-light" (click)="dismissMainModal()">
+                    <i class="ri-close-line align-bottom me-1"></i> Close
+                </button>
+            </div>
+        </div>
     </div>
