--- a/src/app/pages/school/results/result-history/result-history.component.html
+++ b/src/app/pages/school/results/result-history/result-history.component.html
@@ -27,7 +27,7 @@
                                         <button [disabled]="!canPerformPeriodRankings" type="button" class="btn btn-secondary w-100" (click)="calculatePeriodRankings()"><i class="ri-calculator-line mx-2"></i> Period Rankings</button>
                                     </div>
                                     <div class="col-xxl-2 col-lg-6">
-                                        <button [disabled]="!canEditResults" type="button" class="btn btn-primary w-100" ><i class="ri-edit-2-fill mx-2"></i> Edit Results</button>
+                                        <button [disabled]="!canEditResults" type="button" class="btn btn-primary w-100" (click)="openModal()" ><i class="ri-edit-2-fill mx-2"></i> Edit Results</button>
                                     </div>
                                 </div>
                             </form>
