--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumbs title="RESULTS" [breadcrumbItems]="breadCrumbItems" *ngIf="!isModalMode"></app-breadcrumbs>
+<app-breadcrumbs title="RESULTS" [breadcrumbItems]="breadCrumbItems" *ngIf="!isExternalMode"></app-breadcrumbs>
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
