--- a/src/app/pages/school/results/result-history/result-history.component.html
+++ b/src/app/pages/school/results/result-history/result-history.component.html
@@ -24,10 +24,10 @@
                                         <button [disabled]="!canEditResults" type="button" class="btn btn-primary w-100" (click)="openModal()" ><i class="ri-edit-2-fill mx-2"></i> Edit Results</button>
                                     </div>
                                     <div class="col-xxl-2 col-lg-6">
-                                        <button [disabled]="!canPerformYearlyRankings" title="Re-calculate yearly rankings after updating results" type="button" class="btn btn-info w-100" (click)="calculateYearlyRankings()" ><i class="ri-calculator-line mx-2"></i> Yearly Rankings</button>
+                                        <button [disabled]="!canPerformYearlyRankings" title="Perform final rankings for the entire academic year" type="button" class="btn btn-info w-100" (click)="calculateYearlyRankings()" ><i class="ri-calculator-line mx-2"></i> Year Rankings</button>
                                     </div>
                                     <div class="col-xxl-2 col-lg-6">
-                                        <button [disabled]="!canPerformPeriodRankings" title="Re-calculate period rankings after updating results" type="button" class="btn btn-secondary w-100" (click)="calculatePeriodRankings()"><i class="ri-calculator-line mx-2"></i> Period Rankings</button>
+                                        <button [disabled]="!canPerformPeriodRankings" title="Perform rankings for the current academic period" type="button" class="btn btn-secondary w-100" (click)="calculatePeriodRankings()"><i class="ri-calculator-line mx-2"></i> Period Rankings</button>
                                     </div>
                                 </div>
                             </form>
