remove text muted from register student modal

--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -163,7 +163,7 @@
                             </ng-template>
                         </li>
                     </ul>
-                    <div class="tab-content  text-muted">
+                    <div class="tab-content">
                         <div [ngbNavOutlet]="Justify"></div>
                     </div>
         </div>
