--- a/src/app/pages/school/configuration/school/school.component.html
+++ b/src/app/pages/school/configuration/school/school.component.html
@@ -132,7 +132,7 @@
         <div class="card">
             <div class="card-body col-lg-12">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Save</button>
+                    <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </div>
