Add possibility to save results directly after import

--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -126,7 +126,8 @@
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="dismissNestedModal()"><i class="ri-check-line align-bottom me-1"></i> Done</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissNestedModal()"><i class="ri-arrow-right-line align-bottom me-1"></i> Continue</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="saveResults()"><i class="ri-save-2-line align-bottom me-1"></i> Save</button>
                 </div>
             </div>
         </ng-template>
