--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -62,4 +62,25 @@
             </div>
         </form>
     </ng-template>
+
+    <ng-template #successContent let-modal>
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="btn-close" (click)="modal.dismiss('Cross click')"></button>
+      </div>
+      <div class="modal-body text-center">
+        <lord-icon src="assets/images/lord-icons/lupuorrc.json" trigger="loop" colors="primary:#0ab39c,secondary:#405189" style="width:120px;height:120px"></lord-icon>
+        <div class="mt-4 pt-2 fs-15">
+            <h4>Congratulations!</h4>
+            <p class="text-muted mx-4 mb-0">Your institution has been created successfully.</p>
+        </div>
+        <!-- <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
+            <button type="button" class="swal2-cancel btn btn-primary w-xs mb-1" aria-label="" style="display: inline-block;" (click)="modal.close('Close click')">Back</button>
+        </div> -->
+      </div>
+      <div class="modal-footer bg-light p-3 justify-content-center">
+            <p class="mb-0 text-muted">Don't know what to do? <a href="javascript:void(0)" class="link-secondary fw-semibold">Visit our docs</a></p>
+        </div>
+    </div>
+</ng-template>
 </div>
